--- a/Final Delivarables/templates/home.html
+++ b/Final Delivarables/templates/home.html
@@ -12,6 +12,22 @@
             <div class="heading">
                 <h1 class="heading__main">Handwritten Digit Recognizer</h1>
                 <h2 class="heading__sub">Easily analyze and detect handwritten digits</h2>
+                <br>
+                <br>
+                <div class="details">
+                    <h4>Team ID: PNT2022TMID02158</h4>
+                    <h4>Student Names: Jeevitha C, Jeevamutharasi S, Kaushik A,
+                        Krithic Kumar U B</h4>
+                    <h4>
+                        Project Description: Handwritten digit recognition has recently been of very
+                        interest among the researchers because of the evolution of various Machine
+                        Learning, Deep Learning and Computer Vision algorithms. This is highly useful in
+                        finding the numbers that are written using hands. The illegible handwritten
+                        digits are converted to their respective digits.
+                    </h4>
+                </div>
+                <br>
+                <br>
             </div>
             <div class="upload-container">
                 <div class="form-wrapper">
