--- a/Final Delivarables/static/css/main.css
+++ b/Final Delivarables/static/css/main.css
@@ -3,12 +3,13 @@
 * {
 	padding: 0;
 	margin: 0;
-	color: #C1E1C1;
+	color: black;
 }
 
 body {
 	color: black;
 	font-family: "Overpass", sans-serif;
+	background-image: url("/static/images/bg.webp");
 }
 
 .container {
@@ -18,7 +19,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: white;
+	/* background-color: white; */
 }
 
 .heading {
@@ -38,17 +39,6 @@ body {
 	color: rgb(90, 88, 88);
 }
 
-.details {
-    padding-left: 23rem;
-	width: 60%;
-	height: fit-content;
-	display: flex;
-	align-items: center;
-	text-align: center;
-	flex-direction: column;
-	background-color: white;
-}
-
 .upload-container {
 	box-shadow: 0 0 20px rgb(172, 170, 170);
 	width: 40rem;
@@ -57,7 +47,7 @@ body {
 }
 
 .form-wrapper {
-	background-color: rgba(190, 190, 190, 0.5);
+	/* background-color: rgba(190, 190, 190, 0.5); */
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -81,7 +71,7 @@ body {
 	height: fit-content;
 	border-radius: 6px;
 	color: white;
-	background-color: rgb(114, 96, 182);
+	/* background-color: rgb(114, 96, 182); */
 	box-shadow: 0 5px 10px rgb(146, 135, 247);
 }
 
@@ -92,7 +82,7 @@ body {
 .form-wrapper .upload label {
 	font-size: 1rem;
 	font-weight: 600;
-	color: white;
+	color: black;
 	height: 100%;
 	width: 100%;
 	padding: 10px;
